--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,9 +14,14 @@
 <body>
     <header>
         <div class="header-content container">
-        <img class="logo" src="International_Pokémon_logo.svg.webp" alt="Pokemon">
-        <span>yadaaStudy -> codeBoost</span>
+        <img class="header-content-logo" src="assets/International_Pokémon_logo.svg.webp" alt="Pokemon">
+        <span class="header-content-description">YadaaStudy</span>
         </div>
     </header>
+    <section class="">
+        <h1>Temos que pegar!!!</h1>
+        <h1>Guia perfeito para um futuro treinador Pokemon</h1>
+        <img src="assets/Pokeball-PNG-Clipart.png" alt="">
+    </section>
 </body>
 </html>
