--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link href="https://fonts.googleapis.com/css2? family=Bungee+Spice&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="global.css">
     <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="hero.css">
+    <link rel="stylesheet" href="search.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,14 +16,27 @@
 <body>
     <header>
         <div class="header-content container">
-        <img class="header-content-logo" src="assets/International_Pokémon_logo.svg.webp" alt="Pokemon">
-        <span class="header-content-description">YadaaStudy</span>
+         <img class="header-content-logo" src="./assets/pokemon-logo.webp" alt="Pokemon">
+         <span class="header-content-description">YadaaStudy</span>
         </div>
     </header>
-    <section class="">
-        <h1>Temos que pegar!!!</h1>
-        <h1>Guia perfeito para um futuro treinador Pokemon</h1>
-        <img src="assets/Pokeball-PNG-Clipart.png" alt="">
+    <section class="hero">
+        <h1 class="hero-title">Temos que pegar!</h1>
+        <h1 class="hero-subtitle">Guia perfeito para um futuro treinador Pokemon</h1>
+        <img class="hero-img" src="./assets/pokeball.png" alt="pokeball.png">
     </section>
+
+    <main>
+        <div class="search">
+            <div class="container">
+                <div class="search-content">
+                    <strong class="search-content-title">selecione seu pokemon</strong>
+                </div>
+            </div>
+        </div>
+        <div class="list">
+
+        </div>
+    </main>
 </body>
 </html>
